[gd_scene load_steps=3 format=3 uid="uid://bwal4ou5q1iqj"]

[ext_resource type="Script" path="res://Main.gd" id="1_xf84o"]
[ext_resource type="Script" path="res://BulletManager.gd" id="3_68vf8"]

[node name="Main" type="Node2D"]
position = Vector2(598, 304)
script = ExtResource("1_xf84o")

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource("3_68vf8")

[node name="Create" type="Button" parent="."]
offset_left = -124.0
offset_top = -66.0
offset_right = -64.0
offset_bottom = -35.0
text = "Create"

[node name="Join" type="Button" parent="."]
offset_left = -124.0
offset_top = -29.0
offset_right = -64.0
offset_bottom = 2.0
text = "Join"

[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
